# CodingProblems

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SubDirList.cmake
AdjacentPointMinDistance/: CMakeLists.txt  ReadMe.md  solution.cpp  solution.hpp  test.cpp
AllConstruct/: AllConstruct.cpp
BestSum/: BestSum.cpp
BinarySearch/: CMakeLists.txt  main.cpp
BinaryTree/: CMakeLists.txt  binary_heap.hpp  binary_search_tree.hpp  binary_tree.hpp  binary_tree_test.cpp  tree.hpp  tries.hpp
BitTools/: CMakeLists.txt  bit_tools.hpp  tests.cpp
CanConstruct/: CanConstruct.cpp
CanSum/: CMakeLists.txt  CanSum.cpp
Codility/: CMakeLists.txt
Codility/Task10_CountDivisors/: solution.cpp  solution_2.cpp
Codility/Task10_Flags/: solution.cpp
Codility/Task10_MinPerimeterRectangle/: solution.cpp
Codility/Task10_peaks/: solution.cpp
Codility/Task12_ChocolateByNumbers/: solution.cpp
Codility/Task12_CommonPrimeDivisors/: solution.cpp
Codility/Task13-Ladder/: solution.cpp
Codility/Task13_FibFrog/: solution.cpp
Codility/Task17-CoinChangingProblem/: CMakeLists.txt  main.cpp  solution.cpp  solution.hpp  solution_test.cpp
Codility/Task17-JumpingFrog/: CMakeLists.txt  main.cpp
Codility/Task1_BinaryGap/: solution.cpp
Codility/Task2_CyclicRotation/: solution.cpp
Codility/Task2_OddOccurance/: best_solution.cpp  solution.cpp  solution_performance.cpp
Codility/Task3_TapeEquilibrium/: solution.cpp
Codility/Task4_FrogRiverOne/: solution.cpp
Codility/Task4_MaxCounter/: solution.cpp  solution_time_complexity.cpp
Codility/Task4_MissingInteger/: solution.cpp  solution_timecomplexity_On.cpp
Codility/Task4_PermCheck/: solution_On.cpp  solution_Onlogn.cpp
Codility/Task5_CountDiv/: solution.cpp
Codility/Task5_GenomicRangeQuery/: solution_prefix_Onpm.cpp
Codility/Task5_MinAvgTwoSlice/: solution.cpp
Codility/Task5_PassingCars/: solution.cpp
Codility/Task6-Distinct/: solution.cpp
Codility/Task6-ProductofThree/: solution.cpp
Codility/Task6_Triangle/: solution.cpp
Codility/Task7_Brackets/: solution.cpp
Codility/Task7_Fish/: solution.cpp
Codility/Task7_Nested/: solution.cpp
Codility/Task7_StoneWall/: solution.cpp
Codility/Task8_Dominator/: solution.cpp
Codility/Task8_EquiLeader/: solution.cpp
Codility/Task9_MaxDoubleSliceSum/: solution.cpp  solution_100.cpp
Codility/Task9_MaxProfit/: solution.cpp
Codility/Task9_MaxSliceSum/: solution.cpp
CompareShapes/: main.cpp  shapes.cpp  shapes.hpp
ConstVel/: main.cpp
ContainerWithMostWater/: main.cpp
CountConstruct/: CountConstruct.cpp
Cracking/: CMakeLists.txt  Readme.md
Cracking/1-CheckAllUniqueLetters/: CMakeLists.txt  main.cpp
Cracking/1.1-CheckAllUniqueLetters/: main.cpp
Cracking/1.2-CheckPermutation/: CMakeLists.txt
Cracking/1.3-URLify/: CMakeLists.txt  main.cpp
Cracking/1.4-PlindromePermutation/: main.cpp
Cracking/1.5-OneWay/: CMakeLists.txt  main.cpp
Cracking/1.6-StringCompression/: CMakeLists.txt  main.cpp
Cracking/1.7-RotateMatrix/: CMakeLists.txt  main.cpp
Cracking/1.8-ZeroMatrix/: CMakeLists.txt  main.cpp
Cracking/1.9-StringRotation/: CMakeLists.txt  main.cpp
Cracking/2-CheckPermutation/: main.cpp
Cracking/2.0-RearrangeLinkedList/: CMakeLists.txt  main.cpp
Cracking/2.1-RemoveDups/: CMakeLists.txt  main.cpp
Cracking/2.2-ReturnKthtoLast/: CMakeLists.txt  main.cpp
Cracking/2.3-DeleteMiddleNode/: CMakeLists.txt  main.cpp
Cracking/2.4-LinkedListPartition/: CMakeLists.txt  main.cpp
Cracking/2.5-SumLists/: CMakeLists.txt  main.cpp
Cracking/2.6-PalindromListCheck/: CMakeLists.txt  main.cpp
Cracking/2.7-ListIntersection/: CMakeLists.txt  main.cpp
Cracking/4.5-ValidateBST/: CMakeLists.txt  tests.cpp
Cracking/5.5-Debugger/: CMakeLists.txt  solution.hpp  tests.cpp
DesignPatterns/CreationalPatterns/Singleton/: CMakeLists.txt  MeyerSingleton.cpp  MeyerSingleton.hpp  SingletonBenchmark.cpp  ZeroHandle.cpp  ZeroHandle.hpp  main.cpp
DesignPatters/: CMakeLists.txt
Dijkstras/: CMakeLists.txt  dijkstras.hpp
FaveriteNumber/: CMakeLists.txt  main.cpp
FiboImpl/: .project  CMakeLists.txt  FiboImpl.cpp
FileVol/: main.cpp
FindAllPermutations/: CMakeLists.txt  main.cpp
FindBounds/: main.cpp
FindCommonSorted/: CMakeLists.txt  main.cpp
FriendFactory/: CMakeLists.txt  main.cpp
Future/: CMakeLists.txt  main.cpp
Graph/: CMakeLists.txt  graph.hpp  tests.cpp
GridTraveler/: CMakeLists.txt  GridTraveler.cpp
HexBinStringCompare/: CMakeLists.txt  HexBinStringCompare.cpp  HexBinStringCompare.hpp  main.cpp  test.cpp
HowSum/: HowSum.cpp
LetterPhoneNum/: main.cpp
LongestPalindrommicSubstring/: BestSolution.cpp  BestSolution.h  On2Solution.cpp  On2Solution.h  Solution.h  main.c  main.cpp
LongestUnqSubstr/: BestSolution.cpp  BestSolution.h  Solution.h  main.cpp
MinWinSubstr/: MinWinSubstr.cpp
MinimumDistance/: CMakeLists.txt  main.cpp
ObjPool/: main.cpp
QuickKofN/: main.c
RandomCount/: main.cpp
ReverseLinkedList/: CMakeLists.txt  main.cpp
RingBuffer/: main.cpp
Ruleof5/: .project  CMakeLists.txt  Ruleof5.cpp
SieveOfEratosthenes/: CMakeLists.txt  sieve_of_eratosthenes.cpp  sieve_of_eratosthenes.hpp
SortAlgorithm/: CMakeLists.txt
SortAlgorithm/include/: sorting_algorithms.hpp
SortAlgorithm/include/bits/: bubble_sort.hpp  counting_sort.hpp  cycle_sort.hpp  heap_sort.hpp  insertion_sort.hpp  merge_sort.hpp  quick_sort.hpp  radix_sort.hpp  selection_sort.hpp  three_way_merge_sort.hpp
SortAlgorithm/test/: CMakeLists.txt  sort_algorithms_tests.cpp
StringToInt/: main.cpp
StructBinding/: .project  CMakeLists.txt  StructBinding.cpp
ThreeSumClosest/: main.cpp
ThreeSums/: LongTestValue.cpp  LongTestValue.h  main.cpp
TicTacToeWinner/: CMakeLists.txt  ReadMe.md  main.cpp
TwoSum/: main.cpp
TwoSumII/: main.cpp
ZigZagConversion/: main.c
cref/: .project  CMakeLists.txt  cref.cpp
leetcode/: CMakeLists.txt
singly_linked_list_impl/: CMakeLists.txt  singly_linked_list.hpp  test.cpp
stack_impl/: CMakeLists.txt  main.cpp  stack.hpp
string_permutation/: CMakeLists.txt  main.cpp  swap.cpp  vector.cpp
(+238 files in other folders)
